// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VInput.vue renders correctly with default props 1`] = `
<div aria-roledescription="input-container" class="input-container">
  <div class="label-container">
    <div class="label-container__main">
      <!---->
      <h3 class="label-container__main__label"><span></span> <span class="add-label"></span></h3>
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <!----> <input id="" placeholder="default" maxlength="9007199254740991" type="text" class="input" style="width: 100%; height: 48px;">
  <!---->
  <!---->
</div>
`;

exports[`VInput.vue renders correctly with input error 1`] = `
<div aria-roledescription="input-container" class="input-container">
  <div class="label-container">
    <div class="label-container__main">
      <erroricon-stub class="label-container__error-icon"></erroricon-stub>
      <!---->
      <h3 class="label-container__main__error">testError</h3>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <!----> <input id="" placeholder="default" maxlength="9007199254740991" type="text" class="input" style="width: 100%; height: 48px;">
  <!---->
  <!---->
</div>
`;

exports[`VInput.vue renders correctly with isMultiline props 1`] = `
<div aria-roledescription="input-container" class="input-container">
  <div class="label-container">
    <div class="label-container__main">
      <!---->
      <h3 class="label-container__main__label"><span></span> <span class="add-label"></span></h3>
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <!----> <textarea id="" placeholder="default" rows="5" cols="40" maxlength="9007199254740991" wrap="hard" class="textarea" style="width: 100%; height: 48px;"></textarea>
  <!---->
  <!---->
  <!---->
</div>
`;
